Fixed some spacing issues and created CNAME folder on Github web.

--- a/css/AHS.css
+++ b/css/AHS.css
@@ -1,3 +1,11 @@
 .AHS-subtitle {
     letter-spacing: 3px;
 }
+
+.rolesList {
+    list-style-type: none;
+    overflow: hidden;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    color: #6c757d;
+}
