--- a/css/style.css
+++ b/css/style.css
@@ -175,9 +175,11 @@ p{
 .logo {
     color: #fff !important;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 40px;
     text-transform: uppercase;
     letter-spacing: 2px;
+    font-family: hawkins;
+    src: url(../fonts/Hawkins.woff);
 }
 
 .navbar-custom .navbar-nav li.active a,
@@ -401,7 +403,7 @@ p{
 }
 
 .home-prestion {
-    padding-top: 165px;
+    padding-top: 80px;
     background: linear-gradient(rgb(72, 85, 99), rgb(41, 50, 60));
     position: relative;
 }
